Screw it, moving views and layouts into canonical location

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,16 +1,16 @@
 extends ../layouts/default
 
 block head
-  title Drywall is Running
+  title Schwitr
 
 block neck
   link(rel='stylesheet', href='/views/index.min.css?#{cacheBreaker}')
 
 block body
   div.jumbotron
-    h1 Success
+    h1 Welcome to Schwitr
     p.lead
-      | Your Node.js website and user system is running. May the force be with you.
+      | Create, edit, and modify text grammars.
     div
       a.btn.btn-primary.btn-lg(href='/signup/') Create an Account
       | &nbsp;or&nbsp;
