Added gravatar support

--- a/layouts/default.jade
+++ b/layouts/default.jade
@@ -21,12 +21,15 @@ html
           ul.nav.navbar-nav
             li: a(href='/') Home
             li: a(href='/about/') About
-            li: a(href='/signup/') Sign Up
+            if user 
+              li: a(href='/account/') My Account
+            else
+              li: a(href='/signup/') Sign Up
             li: a(href='/contact/') Contact
           ul.nav.navbar-nav.navbar-right
             if user && user.username
               li: a(href='#{user.defaultReturnUrl}')
-                i.fa.fa-user
+                img(src=user.gravatarUrl)
                 |  #{user.username}
             else
               li: a(href='/login/')
