--- a/layouts/account.jade
+++ b/layouts/account.jade
@@ -10,8 +10,8 @@ html
     div.navbar.navbar-default.navbar-fixed-top
       div.container
         div.navbar-header
-          a.navbar-brand(href='/account/')
-            img.navbar-logo(src='/media/logo-symbol-64x64.png', alt='Logo')
+          a.navbar-brand(href='/')
+            img.navbar-logo(src='/media/s-logo.svg', alt='Logo', with='64', height='64')
             span.navbar-brand-label #{projectName}
           button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
             span.icon-bar
@@ -19,12 +19,22 @@ html
             span.icon-bar
         div.navbar-collapse.my-navbar-collapse.collapse
           ul.nav.navbar-nav
-            li: a(href='/account/') My Account
-            li: a(href='/account/settings/') Settings
-          ul.nav.navbar-nav.pull-right
-            li: a(href='/logout/')
-              i.fa.fa-user
-              |  Sign Out
+            li: a(href='/') Home
+            li: a(href='/about/') About
+            if user 
+              li: a(href='/account/') My Account
+            else
+              li: a(href='/signup/') Sign Up
+            li: a(href='/contact/') Contact
+          ul.nav.navbar-nav.navbar-right
+            if user && user.username
+              li: a(href='#{user.defaultReturnUrl}')
+                img(src=user.gravatarUrl)
+                |  #{user.username}
+            else
+              li: a(href='/login/')
+                i.fa.fa-user
+                |  Sign In
 
     div.page
       div.container
