--- a/layouts/admin.jade
+++ b/layouts/admin.jade
@@ -12,7 +12,7 @@ html
       div.container
         div.navbar-header
           a.navbar-brand(href='/admin/')
-            img.navbar-logo(src='/media/logo-symbol-64x64.png', alt='Logo')
+            img.navbar-logo(src='/media/s-logo.svg', alt='Logo')
             span.navbar-brand-label #{projectName}
           button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
             span.icon-bar
