--- a/layouts/default.jade
+++ b/layouts/default.jade
@@ -20,6 +20,7 @@ html
         div.navbar-collapse.my-navbar-collapse.collapse
           ul.nav.navbar-nav
             li: a(href='/') Home
+            li: a(href='/edit/') New Grammar
             li: a(href='/about/') About
             if user 
               li: a(href='/account/') My Account
