--- a/views/contact/index.jade
+++ b/views/contact/index.jade
@@ -18,9 +18,8 @@ block body
     div.col-sm-6.special
       div.page-header
         h1 Contact Us
-      p.lead Freddy can't wait to hear from you.
-      i.fa.fa-reply-all.super-awesome
-      address 1428 Elm Street &bull; San Francisco, CA 94122
+      p.lead Send us mail! We like mail!
+      i.fa.fa-envelope-o.super-awesome
 
   script(type='text/template', id='tmpl-contact')
     form
@@ -33,7 +32,7 @@ block body
         |<% if (success) { %>
         div.alert.alert-info.alert-dismissable
           button.close(type='button', data-dismiss='alert') &times;
-          | We have received your message. Thank you.
+          | Message has been sent. Thanks!
         |<% } %>
       |<% if (!success) { %>
       div.form-group(class!='<%- errfor.name ? "has-error" : "" %>')
